Docs: js testing in TESTING.md. Fix: contrast issues in review links in index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,8 +154,8 @@ p {
     text-decoration: none;
 }
 
-.custom-link {
-    color:var(--accent-color);
+a.your-reviews-link a {
+    color:var(--text-color);
     font-weight: 700;
     text-decoration: none;
 }
